- fixed grey background on mobile   - close #83 - fixed more matches link at wrong location.

--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -57,7 +57,7 @@
     }
   }
 
-  .more-matches {
+  .matches .more-matches {
     display: flex;
     justify-content: center;
     align-items: center;
